updated top banner and lower HR
noted out <body class main-text> to make top banner fit full screen and suite smaller screens,  removed bottom <HR> horizontal line replaced with <BR> break

--- a/Adam_puckeridge.html
+++ b/Adam_puckeridge.html
@@ -65,7 +65,7 @@
 <!--profile text-->
 <div  class = "main-text">
     <img src="images/adamuckeridge.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Adam Puckeridge" style="width:225px;height:250px;">
-    <body class = "main-text">
+    <!--body class = "main-text"-->
         <h2>Adam Puckeridge</h2>
         <h4>Student No: S3964092</h4>
         <h4>Nationality: Australian </h4>
@@ -109,8 +109,7 @@
         </tr>
      
       </table>
-<hr>
-
+<br>
 </div>
  <!--footer-->
 <footer>
