--- a/Aiden_howlett.html
+++ b/Aiden_howlett.html
@@ -65,7 +65,7 @@
 <!--group text-->
 <div  class = "main-text">
     <img src="images/aidenhowlett.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Aiden Howlett" style="width:250px;height:250px;">
-    <body class = "main-text">
+    <!--body class = "main-text"-->
             
             <h2>Aiden Howlett</h2>
             <h4>Student No: S3962116</h4>
@@ -110,7 +110,7 @@
         </tr>
      
       </table>
-<hr>
+<br>
 
 </div>
 <!--footer-->
