--- a/Helen_Andrews.html
+++ b/Helen_Andrews.html
@@ -64,7 +64,7 @@
 <!--group text-->
 <div  class = "main-text">
     <img src="images/Helenandrews.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Helen Andrews"  style="width:240px;height:250px;">
-    <body class = "main-text">
+    <!--body class = "main-text"-->
             
             <h2>Helen Andrews</h2>
             <h4>Student No: S3965754</h4>
@@ -109,7 +109,7 @@
         </tr>
      
       </table>
-<hr>
+<br>
 
 </div>
 <!--footer-->
