--- a/IT_tech_cybersecurity.html
+++ b/IT_tech_cybersecurity.html
@@ -69,7 +69,7 @@
 
 
 
-<body class = "main-text">
+<!--body class = "main-text"-->
     <div class = "main-text">
 
         <p><b>What does it do?</b></p>
@@ -139,7 +139,7 @@
         <p>I personally have been affected by cyber security issues. My family and I, like most others, frequently receive phishing emails and scam calls. In addition, we were also affected in 2016 when the census was shut down because of a server overload. The Australian Bureau of Statistics claimed that they had experienced a DoS attack, although it is unknown whether the cause of the outage was simply because of higher-than-expected server load (Johnstone 2016).</p>
 
         <p>The effects of cyber security on people’s everyday lives are only getting worse. According to the Thales Data Threat Report (2022:4), 53% of businesses in Europe and the Middle East have suffered cybersecurity breaches at some point, and only 19% said that “they had complete knowledge of where their data is stored”. Because of the rising dangers of cybercrime and security breaches, IT professionals and regular people alike should be on their guard and actively working towards a more safe and secure future.  </p>
-<hr>
+<br>
     </div>
 </body>
 <!--footer-->
