--- a/IT_tech_cybersecurity_references.html
+++ b/IT_tech_cybersecurity_references.html
@@ -71,7 +71,7 @@
 
 
 
-<body class = "main-text">
+<!--body class = "main-text"-->
     <div class = "main-text">
 
         <p><a href = "https://www.wired.com/story/google-free-security-keys-campaigns/">https://www.wired.com/story/google-free-security-keys-campaigns/</a></p>
@@ -82,7 +82,7 @@
         <p><a href = "https://cybersecurityventures.com/cybercrime-damages-6-trillion-by-2021/">https://cybersecurityventures.com/cybercrime-damages-6-trillion-by-2021/ </a></p>
         <p><a href = "https://theconversation.com/did-the-census-really-suffer-a-denial-of-service-attack-63755">https://theconversation.com/did-the-census-really-suffer-a-denial-of-service-attack-63755 </a></p>
         <p><a href = "https://cpl.thalesgroup.com/sites/default/files/content/research_reports_white_papers/field_document/2022-05/2022-thales-data-threat-report-emea-edition.pdf">https://cpl.thalesgroup.com/sites/default/files/content/research_reports_white_papers/field_document/2022-05/2022-thales-data-threat-report-emea-edition.pdf </a></p>
-<hr>
+<br>
     </div>
 </body>
 <!--footer-->
