--- a/IT_tech_machinelearning.html
+++ b/IT_tech_machinelearning.html
@@ -70,7 +70,7 @@
     </div>
 
 <!--main text-->
-<body class = "main-text">
+<!--body class = "main-text"-->
     <div class = "main-text">
 <p><b>What does it do?</b></p>
 
@@ -167,7 +167,7 @@
 
     <p>As for my personal life, I believe products like Github Copilot have the potential to change things for me, as someone who is studying with the idea of getting a job as a programmer or software developer.
      Whether it will be a change for the better or worse, only time will tell.</p>
-     <hr>
+     <br>
      </div>
     </body>
     <!--footer-->
