--- a/IT_tech_machinelearning_references.html
+++ b/IT_tech_machinelearning_references.html
@@ -69,7 +69,7 @@
     </div>
 
 <!--main text-->
-<body class = "main-text">
+<!--body class = "main-text"-->
     <div class = "main-text">
 
     <p>BBC 2016, ‘Artificial intelligence: Google’s AlphaGo beats Go master Lee Se-dol', BBC News, 12 March, viewed 5 July 2022, <a href ="https://www.bbc.com/news/technology-35785875">https://www.bbc.com/news/technology-35785875"</a></p>
@@ -98,7 +98,7 @@
 
     <p>Silver, D, Schrittwieser, J, Simonyan, K, Antonoglou, I, Huang, A, Guez, A, Hubert, T, Baker, L, Lai, M, Bolton, A, Chen, Y, Lillicrap, T, Hui, F, Sifre, L, Driessche, G, Graepel, T & Hassabis, D 2017, ‘Mastering the game of Go without human knowledge’, Nature, vol. 550, pp. 354-359. <a href = "https://doi.org/10.1038/nature24270">https://doi.org/10.1038/nature24270</a></p>
 
-<hr>
+<br>
 </div>    <!--footer-->
 <footer>
     <div>
