--- a/IT_work.html
+++ b/IT_work.html
@@ -83,13 +83,13 @@
     </div>
 
 <!--main text-->
-<body class = "main-text">
+<!--body class = "main-text"-->
     <div class = "main-text">
 
 <!--INSERT TEXT FROM HERE-->
 
 
-<hr>
+<br>
     </div>
     </body>
     <!--footer-->
