--- a/Industry_data_references.html
+++ b/Industry_data_references.html
@@ -70,12 +70,12 @@
 
 
 <!-- referecnes links-->
-<body class = "main-text">
+<!--body class = "main-text"-->
     <div class = "main-text">
 
         <p><a href = "https://resources.workable.com/full-stack-developer-job-description">https://resources.workable.com/full-stack-developer-job-description </a></p>
         <p><a href = "https://www.seek.com.au/career-advice/role/sales-and-business-development-manager">https://www.seek.com.au/career-advice/role/sales-and-business-development-manager </a> </a></p>
-<hr>
+<br>
     </div>
 </body>
 <!--footer-->
