--- a/Project_idea.html
+++ b/Project_idea.html
@@ -73,7 +73,7 @@
     </div>
 
 <!--main text-->
-<body class = "main-text">
+<!--body class = "main-text"-->
     <div class = "main-text">
 <p><b>Overview</b></p>
 
@@ -124,11 +124,7 @@
 <p>The desired outcome of this application is an increased uptake of commuter cycling and a greater sense of safety given to users of the application as they would be more likely to be aware of hazards ahead of time. The data provided by users of the application could also be utilised by those who maintain the infrastructure to provide a higher quality of service to bicycle riders comparable to that experienced by motorists. </p>
 
 
-
-
-
-
-<hr>
+<br>
     </div>
     </body>
     <!--footer-->
