--- a/Project_idea_references.html
+++ b/Project_idea_references.html
@@ -72,7 +72,7 @@
     </div>
 
 <!--main text-->
-<body class = "main-text">
+<!--body class = "main-text"-->
     <div class = "main-text">
 
 <p>Crozier, R., 2022. ANZ Plus has a 'halo effect' on the bank. [online] iTnews. Available at: <a href = "https://www.itnews.com.au/news/anz-plus-has-a-halo-effect-on-the-bank-580626">https://www.itnews.com.au/news/anz-plus-has-a-halo-effect-on-the-bank-580626</a> [Accessed 19 June 2022]. </p>
@@ -99,7 +99,7 @@
 
 <p>Service NSW. 2022. Live Traffic NSW. [online] Available at: <a href = "https://www.service.nsw.gov.au/transaction/live-traffic-nsw"> https://www.service.nsw.gov.au/transaction/live-traffic-nsw</a>[Accessed 19 June 2022]. </p>
 
-<hr>
+<br>
     </div>
     </body>
     <!--footer-->
