--- a/Robert_Longmore.html
+++ b/Robert_Longmore.html
@@ -67,7 +67,7 @@
 
 <div  class = "main-text">
     <img src="images/roblongmore.jpg" align="right" hspace="10" vspace = '10' width="30%" alt="Bad landing"  style="width:250px;height:250px;">
-    <body class = "main-text">
+    <!--body class = "main-text"-->
             
             <h2>Robert Longmore</h2>
             <h4>Student No: S3954217</h4>
@@ -110,7 +110,7 @@
         </tr>
      
       </table>
-<hr>
+<br>
 
 </div>
 
