--- a/meetings_recordings.html
+++ b/meetings_recordings.html
@@ -80,36 +80,17 @@
 
     <p>4th meeting, Progressing well.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/EQqzOfTffT0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-
-
-
-    
+  
     </div>
 
 <!--main text-->
-<body class = "main-text">
+<!--body class = "main-text"-->
     <div class = "main-text">
 
 <!--INSERT TEXT FROM HERE-->
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<hr>
+<br>
     </div>
     </body>
     <!--footer-->
