--- a/Ideal_jobs.html
+++ b/Ideal_jobs.html
@@ -52,7 +52,7 @@
             
             <i class = "arrow-down"></i>
         </button>
-        <div class = "dropdown-content">
+        <div class = "dropdown-content">c
             <a href = "IT_tech_cybersecurity_references.html">Cyber Security</a>
             <a href = "IT_tech_machinelearning_references.html">Machine Learning</a>
             <a href = "Industry_data_references.html">Industry Data</a>
@@ -71,7 +71,7 @@
     </div>
 
 <!--main text-->
-<body class = "main-text">
+<!--body class = "main-text"-->
     <div class = "main-text">
         <p><b>Ideal Jobs</b></p>
         <figure class = "figure-style-40">
