--- a/Industry_data.html
+++ b/Industry_data.html
@@ -70,7 +70,7 @@
     </div>
 
 <!--main text-->
-<body class = "main-text">
+<!--body class = "main-text"-->
     <div class = "main-text">
         <figure class = "figure-style-40">
             <img src="images/Pie.png" align="right" width="100%">
@@ -123,7 +123,7 @@
             <li>Data analysis</li>
         </ul>
 
-        <hr>
+        <br>
     </div>
 </body>
     <!--footer-->
