ideal jobs updated
data updated to reflect printed report.

--- a/Ideal_jobs.html
+++ b/Ideal_jobs.html
@@ -79,25 +79,28 @@
             <figcaption>CHANGE ME!!!!!!!!!</a></figcaption>
         </figure>
 
-        <p>In general, our ideal jobs are all remarkably similar with the exception of Robert. Most of us are looking at going in the direction of being a Software Developer/Engineer. Robert’s ideal job is as a Business Developer. </p>
+        <p>In general, our ideal jobs are all remarkably similar except for Robert. Most of us are looking at going in the direction of being a Software Developer/Engineer. Robert’s ideal job is as a Business Developer. </p>
 
         <p><b>What common elements are there, if any?  </b></p>
-        <p>The most common element across all our group's ideal jobs is that almost every job has teamwork, problem solving and written and verbal communication skills as a requirement. As most of us are looking at going in the Software Developer/Engineer direction, these jobs all have a deep understanding of writing code as a similarity. </p>
+        <p>The most common element across all our group's ideal jobs is that almost every job has teamwork, problem-solving and written and verbal communication skills as a requirement. As most of us are looking at going in the Software Developer/Engineer direction, these jobs all have a deep understanding of writing code as a similarity. </p>
 
         <p><b>What differentiates each position from the others, if anything? </b></p>
-        <p>Robert’s ideal job is the only one that is really different as it is a business development job and is not directly related to IT. It has some elements of IT as it is a job that requires technical knowledge of the products that the company makes. The job also requires basic computer skills such as familiarity with Microsoft office.  </p>
-        <p>As for the rest of the group, each job has their own specific set of coding/platform skills depending on what type of systems they are using. </p>
+        <p>Robert’s ideal job is the only one that is different as it is a business development job and is not directly related to IT. It has some elements of IT as it is a job that requires technical knowledge of the products that the company makes. The job also requires basic computer skills such as familiarity with Microsoft Office.</p>
+
+        <p>As for the rest of the group, each job differentiates itself as each employer has their own specific set of coding/platform skills depending on what type of systems the employer will be using.</p>
 
         <p><b>How similar or different are your career plans across the group? </b></p>
-        <p>Most of us have very similar career plans as we are all interested in a job that heavily involves coding, whether that is building websites, games or creating apps. </p>
-        <p>Robert is the only one in the group whose job is different as his is a business development role. This role entails finding new customers and identifying ways to grow the business rather than being directly involved in the IT side of the business. </p>
+
+        <p>Most of us have very similar career plans as we are all interested in a job that heavily involves coding, whether that is building websites, games or creating apps.</p>
+
+        <p>Robert is the only one in the group whose job is different as his ideal job is a business development role. This role entails finding new customers and identifying ways to grow the business rather than being directly involved in the IT side of the business.</p>
         <hr>
 
         <!-- people parts-->
         <img src="images/Helenandrews.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Helen Andrews"  style="width:240px;height:250px;">
         <h3>Helen </h3>
         <p><b>Junior Software Developer </b></p>
-        <p>As a Junior Software Developer in our company, you will help with development work on our primary product. Our goal for this position is to build both our product and your development skills. You will receive training and help develop and support our web-based solutions as part of our enthusiastic dev team </p>
+        <p>A junior software developer is an entry-level member of a software development team. They aid in the creation of company programs and software. The responsibilities of this role include designing, implementing, testing, and managing software. </p>
 
         <p><b>Skills Required </b></p>
         <ul>
@@ -115,7 +118,7 @@
         <img src="images/aidenhowlett.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Aiden Howlett" style="width:250px;height:250px;">
         <h3>Aiden </h3>
         <p><b>Junior Software Engineer </b></p>
-        <p>Junior software engineers are entry-level members of a software development team. They assist the team with basic tasks under the supervision of their seniors, such as learning base code and writing simple code, and debugging existing software. </p>
+        <p>Junior software engineers are entry-level members of a software development team. They assist the team with basic tasks under the supervision of their seniors, such as learning base code and writing simple code and debugging existing software. </p>
 
         <p><b>Skills Required </b></p>
         <ul>
@@ -134,15 +137,15 @@
         <img src="images/seanDechavez.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Sean De Chavez"  style="width:150px;height:250px;">
         <h3>Sean</h3>
         <p><b>Video Game Programmer  </b></p>
-        <p>A Game Developer is a Software Developer who specialises in creating computer or video games. Game Developers may focus on one or more platforms (such as PlayStation, Xbox, Nintendo or PC), or specialise in mobile or handheld game development. They may specialise further in a particular aspect of game development, such as programming the game’s Artificial Intelligence or virtual landscapes. </p>
+        <p>A Game Developer is a Software Developer who specialises in making computer or video games. Game Developers may focus on one or more platforms such as PlayStation, Xbox, Nintendo or PC. They may also specialise in mobile or handheld game development. </p>
 
         <p><b>Skills Required </b></p>
         <ul>
             <li>Coding in C, C++ and C# </li>
-            <li>Working in a team </li>
+            <li>Ability to work well in a team </li>
             <li>Great verbal, written and interpersonal skills </li>
             <li>Excellent time management  </li>
-            <li>Able to familiarise quickly with codebases </li>
+            <li>Ability to familiarise quickly with codebases </li>
             <li>Problem Solving </li>
             </ul>
         <hr>
@@ -150,7 +153,7 @@
         <img src="images/roblongmore.jpg" align="right" hspace="10" vspace = '10' width="30%" alt="Bad landing"  style="width:250px;height:250px;">
         <h3>Robert</h3>
         <p><b>Aviation Business Development Manager  </b></p>
-        <p>A Business Development Manager is a professional who is responsible for the growth of their department. They work with their sales team to develop mutually beneficial proposals, negotiate contract terms and communicate effectively with stakeholders. A Business Development Manager can also be responsible for identifying and researching new clients and maintaining existing relationships. </p>
+        <p>A Business Development Manager is a professional who is responsible for the growth of the department. They work with their sales team to develop mutually beneficial proposals, negotiate contract terms and communicate effectively with stakeholders. A Business Development Manager can also be responsible for identifying and researching new clients and maintaining existing relationships.  </p>
 
         <p><b>Skills Required </b></p>
         <ul>
@@ -160,7 +163,7 @@
             <li>Analytical and problem-solving skills </li>
             <li>Time management </li>
             <li>Experience with Microsoft's range of office apps </li>
-            <li>great verbal, written and interpersonal skills </li>
+            <li>Great verbal, written and interpersonal skills </li>
             </ul>
         <hr>
 
@@ -169,7 +172,7 @@
         <img src="images/joshuamccorkell.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Joshua McCorkell"  style="width:225px;height:250px;">
         <h3>Joshua</h3>
         <p><b>Web Developer </b></p>
-        <p>A web developer makes and maintains websites. They are in charge of a site’s overall look and feel. Web developers also handle the technical aspects of a website, including its performance (website speed) and capacity (the maximum amount of traffic the site could handle at a given time). A web developer is usually knowledgeable in both graphic design and programming. </p>
+        <p>A web developer makes and maintains websites. They are in charge of a site’s overall look and feel. Web developers also handle the technical aspects of a website, including its performance (website speed) and capacity (the maximum amount of traffic the site could handle at a given time). A web developer is usually knowledgeable in both graphic design and programming.</p>
 
         <p><b>Skills Required </b></p>
         <ul>
@@ -188,9 +191,9 @@
             <li>Project Management </li>
             <li>Problem Solving </li>
             <li>Windows and Windows Server </li>
-            <li>Experience with microsoft's range of office apps. </li>
+            <li>Experience with Microsoft 365 </li>
             <li>Communication Skills </li>
-            <li>Working in a team </li>
+            <li>Ability to work well in a team </li>
             </ul>
         <hr>
 
@@ -200,7 +203,7 @@
         <img src="images/adamuckeridge.jpg" align ="right" hspace="10" vspace = '10' width="30%" alt="Adam Puckeridge" style="width:225px;height:250px;">
         <h3>Adam</h3>
         <p><b>Full Stack Web Developer </b></p>
-        <p>A Full Stack Web Developer is responsible for both the back end and front end of a website or application. This means they can provide end to end service and can be involved in projects that require databases and user interface aspects. They design, develop and maintain a system, website or application. </p>
+        <p>A Full Stack Web Developer is responsible for both the backend and frontend of a website or application. This means they can provide end-to-end service and can be involved in projects that require databases and user interface aspects. They design, develop, and maintain a system, website, or application. </p>
 
         <p><b>Skills Required </b></p>
         <ul>
