updated personal profile pages to reflect updates to doc

--- a/Adam_puckeridge.html
+++ b/Adam_puckeridge.html
@@ -82,7 +82,7 @@
         
     </body>
 <body>
-    <p>Adam was born in Australia and grew up in the Sutherland Shire, Sydney. In 2017, Adam moved to Blayney in New South Wales’ Central West. Adam’s first passion is music - playing the guitar and drums - with anything related to technology being a close second. Adam currently works full time as a salesperson with Toyota and is studying because they would like to work in a field they enjoy. </p>
+    <p>Adam was born in Australia and grew up in the Sutherland Shire, Sydney. In 2017, Adam moved to Blayney in New South Wales’ Central West. Adam’s first passion is music - playing the guitar and drums - with anything related to technology being a close second. Adam currently works full-time as a salesperson with Toyota and is studying because he would like to work in a field he enjoys. </p>
     </body>
     <hr>
 
