--- a/Helen_Andrews.html
+++ b/Helen_Andrews.html
@@ -84,7 +84,7 @@
 
 
 <body>
-    <p>From Launceston, Tasmania, Helen works as a System Administrator for a Tasmanian owned health fund and being exposed to new technologies in the field has sparked her interest in IT. When it's cold outside, you will find Helen indoors playing video games and studying</p>
+    <p>From Launceston, Tasmania, Helen works as a System Administrator for a Tasmanian-owned health fund and being exposed to new technologies in the field has sparked her interest in IT. When it's cold outside, you will find Helen indoors playing video games and studying.</p>
 </body>
 <hr>
 <h4>Personality</h4>
