--- a/Joshua_McCorkell.html
+++ b/Joshua_McCorkell.html
@@ -82,7 +82,7 @@
         <hr><!--horizontal line-->
        
 <body>
-    <p>Joshua is a 16-year-old from Hervey Bay, Queensland. He has been home-schooled for almost 5 years and is currently transitioning to university studies. Joshua’s main experience in IT is in computer programming - being capable of working with Java and Python - and has been mostly self-taught up to this point. In his spare time, Joshua enjoys chess and basketball. .</p>
+    <p>Joshua is a 16-year-old from Hervey Bay, Queensland. He has been home-schooled for almost 5 years and is currently transitioning to university studies. Joshua’s main experience in IT is in computer programming - being capable of working with Java and Python - and has been mostly self-taught up to this point. In his spare time, Joshua enjoys chess and basketball. </p>
 </body>
 <hr>
 
