It work updated
added content to match document, images to be sourced and added to improve aesthetics

--- a/IT_work.html
+++ b/IT_work.html
@@ -66,17 +66,24 @@
     <div class = "main-text">
         <h2>IT Work</h2>
     <h3>Interview with an IT Professional. </h3><hr>
-    <p>We have chosen as a group to interview Sally Longmore, as she works at Woolworths Group as a Digital Product Lead. </p>
+    <p>As a group, we interviewed Sally Longmore, as she works with Woolworths Group as Digital Product Lead. </p>
+    <p>Sally’s role at Woolworths Group is Digital Product Lead, which means she is a lead engineer in her group, and her role often extends to designing how systems and solutions are implemented in their environment. The role includes a lot of documentation, scripting and coding, and also requires her to understand the company infrastructure. The role also includes things like OS deployment, configuration management, and learning new skills such as container management. </p>
 
-    <h4>How would you choose to describe your position at Woolworths Group? What kind of work do you do? </h4>
-    <p>(DPL) Digital Product Lead – lead engineer in team, extends to design such as systems/solutions implemented in environment. Lots of documentation, lots of code, understand company structure, OS deployment, configuration management and learning new things like container management. Wide role, never the same thing day to day</p>
+    <p>Most of the people whom Sally interacts with in her job are other staff and colleagues, such as the Networking team or the Server team, who need to be collaborated with. In addition, there are ‘internal customers’; essentially other departments and other sections of the organisation that demand the attention of Sally’s department. For example, the part of the company that manages in-store marketing, Cartology (Pash 2019). Sally’s team is responsible for equipment - such as displays at store entrances - and installs infrastructure in stores. Other departments, on the other hand, are responsible for the other tasks, such as managing displayed content. </p>
 
-    <h4>What kinds of stakeholders (staff, customers etc.) do you work with on a regular basis? </h4>
-    <p>Usually internal, other teams like networking team, server team, internal customers (other parts of the business, e.g., instore advertising which is responsible for the content)</p>
-    <p>A lot of internal customers, internal teams to deal with, also management. Whenever you're in IT there’s always a project sponsor who brings project forward and takes responsibility</p>
-    <p>Team outsources to vendors, vendor solutions need to be adapted, which can be difficult as vendors have an agenda.</p> 
-    <p>Need to be able to learn quickly </p>
-   
+    <p>Sally’s team also frequently interacts with vendors, which can be difficult as these vendors have agendas such as getting their products in store, however, Sally and her team require the implementation to meet company standards on security and others, without breaking existing systems and infrastructure. </p>
+
+    <p>Being able to learn quickly is an important skill in this position, because the various stakeholders are all after different things, and are always trying to do something new. In addition, an important factor there are always stakeholders sponsoring and requesting new projects and solutions, and there are stakeholders who are accountable for these projects being completed. </p>
+
+    <p>Sally spends most of her time working from home, which she enjoys far more than working in an office. Occasionally, a visit to the office to work in the lab is a necessity, however. She has found working from home boosts her productivity, in addition to being more enjoyable and comfortable, especially for someone who has an introverted personality.</p> 
+
+    <p>In terms of what projects and tasks she spends most of her time on, at the moment, approximately 80% of her time is spent programming for a complex project that involves PowerShell scripts that need to make robust decisions. Generally, however, much of her work involves documentation, which she says is one of the most important parts of IT. Everything must be documented to the level that someone else could come and pick that up where it was left off, especially in the case of someone getting sick or leaving the company, etc. This is especially important if there is any programming involved. According to Sally, “Documentation is extremely important […] It’s great if your code works, but if I can’t understand it, then it’s useless to me.” </p> 
+
+    <p>Because Sally leads the group that she is in, she takes a lead role in many of the decisions that are made. This is because someone with technical knowledge is often required to make these decisions. </p>
+
+    <p>Sally tells us that the most challenging part of her job is working with others. In an organisation the size of Woolworths Group, many stakeholders need to be consulted often. Woolworths is the biggest employer in the country, and they have a large IT department of approximately 2800 employees, a number which is likely only surpassed by large international companies. There are a lot of individuals, who have different ideas and directions, different interests and different motives and responsibilities. This can often cause conflict when different departments want things done in different ways, and the alternatives need to be discussed. Technical discussions may ensue, and some matters need to be escalated. Working with people is a skill that needs to be developed over time, and certainly also a skill not everybody has! </p>
+
+
     <iframe width="560" height="315" src="https://www.youtube.com/embed/QluN9GP3hzY" title="YouTube video player" frameborder="0"
      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
