--- a/IT_tech_machinelearning.html
+++ b/IT_tech_machinelearning.html
@@ -81,42 +81,21 @@
     </figure>
 </div>
 
-    <p>Machine learning and AI (Artificial Intelligence) is an area of technology that has experienced exceptionally large amounts of growth in recent years.
-     Machine learning can be used for almost any task that involves data processing and data analysis, such as facial recognition, natural language processing,
-      and other pattern recognition applications. On a basic level, machine learning is achieved by showing an algorithm large amounts of data, which is used to
-       train it to recognize similar patterns in other data. There are several ways to achieve this, and many different types of algorithms can be used.</p>
+    <p>Machine learning and AI (Artificial Intelligence) is an area of technology that has experienced exceptionally large amounts of growth in recent years. Machine learning can be used for almost any task that involves data processing and data analysis, such as facial recognition, natural language processing, and other pattern recognition applications. On a basic level, machine learning is achieved by showing an algorithm a large amount of data, which is used to train it to recognise similar patterns in other data. There are several ways to achieve this, and many different types of algorithms can be used. </p>
 
-    <p>One of the main ways machine learning is achieved is using a neural network. A neural network is a set of layers of nodes (like neurons in a human brain, 
-    hence the name neural network). Each node relates to the nodes in the next layer. Exactly how much each node affects the next nodes is determined by a set of ‘weights’,
-    and these weights are adjusted algorithmically to make the algorithm ‘learn’. At one end of the neural network there is an ‘input layer’, and at the other end, 
-    there is an ‘output layer’. One of the simplest applications for a neural network is handwriting recognition. The input nodes are pixels, and the output nodes
-    are each a different character. Whichever character’s output node is switched on the most, is the neural network’s prediction. For each prediction the network
-    makes when learning, if correct it will reinforce its current weights, and if incorrect it will adjust them accordingly.</p>
+    <p>One of the main ways machine learning is achieved is by using a neural network. A neural network is a set of layers of nodes (like neurons in a human brain, hence the name neural network). Each node relates to the nodes in the next layer. Exactly how much each node affects the next nodes is determined by a set of ‘weights’, and these weights are adjusted algorithmically to make the algorithm ‘learn’. At one end of the neural network there is an ‘input layer’, and at the other end, there is an ‘output layer’. One of the simplest applications for a neural network is handwriting recognition. The input nodes are pixels, and the output nodes are each a different character. Whichever character’s output node is switched on the most, is the neural network’s prediction. For each prediction, the network makes when learning, if correct it will reinforce its current weights, and if incorrect it will adjust them accordingly. </p>
 
-    <p>The following are three of the most well-known and significant machine learning projects:</p>  
-    <p>As one of the most famous examples of the powers of machine learning, AlphaGo made headlines in 2016 when it beat the European Champion Fan Hui in a match, 
-    and subsequently won a 6-game match 5-1 against the world’s best Go player Lee Se-dol (Silver et al. 2016, 2017). AlphaGo’s neural networks were trained partly 
-    by looking at Go master games, but mostly by playing millions of games against itself, and learning from its mistakes (BBC 2016). The same team that made AlphaGo
-    subsequently made AlphaZero, a single system which mastered the games of Chess, Shogi (Japanese Chess) and Go, beating the world class programs in all 3 games (Silver et al. 2018).</p> 
+    <p><b>The following are three of the most well-known and significant machine learning projects:</b></p>  
 
-    <p>GPT-3 is a natural language processing machine learning model created by OpenAI. It can generate natural language from a prompt, for example “Write a tagline for a shop that sells computer parts” 
-    or “Write a 100-word summary of what chemistry is.”, and even things like “Summarize the following paragraph for a second-grade student” and “Translate the following sentence to Japanese” (OpenAI 2022a).
-     Their API is currently available to use online to try for free or pay to use it more extensively and with more control (OpenAI 2022b).</p>
+    <p>As one of the most famous examples of the powers of machine learning, AlphaGo made headlines in 2016 when it beat the European Go Champion Fan Hui in a match, and subsequently won a 6-game match 5-1 against the world’s best Go player Lee Se-dol (Silver et al. 2016, 2017). AlphaGo’s neural networks were trained partly by looking at Go master games, but mostly by playing millions of games against itself, and learning from its mistakes (BBC 2016). The same team that made AlphaGo subsequently made AlphaZero, a single system that mastered the games of Chess, Shogi (Japanese Chess) and Go, beating the world-class programs in all 3 games (Silver et al. 2018). </p> 
 
-    <p>Dall-E 2 is an image processing machine learning model that is able to generate images from natural language prompts.
-    Things like ‘a koala dunking a basketball’ or ‘a panda on the moon in the style of Claude Monet’ can be used to generate high resolution images on demand.
-    It can also do other things like alter existing pictures with realistic looking changes, and produce variations on paintings and photos, 
-    for example the Mona Lisa on a different angle or in a different style (OpenAI 2022c).</p>
+    <p>GPT-3 is a natural language processing machine learning model created by OpenAI. It can generate natural language from a prompt, for example, “Write a tagline for a shop that sells computer parts” or “Write a 100-word summary of what chemistry is.”, and even things like “Summarize the following paragraph for a second-grade student” and “Translate the following sentence to Japanese” (OpenAI 2022a). Their API is currently available to use online to try for free, or pay to use it more extensively and with more control (OpenAI 2022b). </p>
 
-    <p>In the future, machine learning is expected to continue revolutionizing many different fields, including many fields (like the game of Go)
-     which had been thought to be unsolvable by technology. Things like better language processing will allow machine learning chatbot algorithms to sound more and more like people. 
-     Increased development on projects like Dall-E 2 and Deepfakes could lead to near unlimited generation of fake videos and images.</p>
+    <p>Dall-E 2 is an image processing machine learning model that can generate images from natural language prompts. Things like ‘a koala dunking a basketball’ or ‘a panda on the moon in the style of Claude Monet’ can be used to generate high-resolution images on demand. It can also do other things like alter existing pictures with realistic-looking edits, and produce variations on paintings and photos, for example, the Mona Lisa from a different angle or in a different style (OpenAI 2022c). </p>
 
-    <p>Many of these developments in machine learning have only been made possible because of increases in processing power.
-     Training and using large neural networks (which often contain many millions of nodes) requires extremely large amounts of processing power,
-     most of which is used simply for doing matrix multiplication and similar number crunching operations. This problem has been partly overcome using large numbers of powerful GPUs; 
-     and although this is still the main limiting factor in machine learning development, 
-     research is currently being undertaken to find ways of doing these types of operations faster and more efficiently (Muller 2022, Mythic 2022).</p>
+    <p>In the future, machine learning is expected to continue revolutionizing many different fields, including many fields (like the game of Go) which had been thought to be unsolvable by technology. Things like better language processing will allow machine learning chatbot algorithms to sound more and more like people. Increased development on projects like Dall-E 2 and ‘deepfakes’ could lead to a near unlimited generation of fake videos and images.  </p>
+
+    <p>Many of these developments in machine learning have only been made possible because of increases in processing power. Training and using large neural networks (which often contain many millions of nodes) requires extremely large amounts of processing power, most of which is used simply for doing matrix multiplication and similar number crunching operations. This problem has been partly overcome using large numbers of powerful GPUs; and although this is still the main limiting factor in machine learning development, research is currently being undertaken to find ways of doing these types of operations faster and more efficiently (Muller 2022, Mythic 2022). </p>
 
     <p><b>What is the likely impact?</b></p> 
 
@@ -127,46 +106,23 @@
         </figure>
     </div>
 
-    <p>Developments in machine learning and AI have had impacts in many areas. As mentioned above, things like Chess, Go, and even many video games, 
-     have been revolutionized by the advent of AI opponents that can beat even the best players.
-     Other fields like writing and video/photo editing are currently in the process of changing because of the invention of powerful machine learning tools like GPT-3 and Dalle-E 2. 
-     All of these fields, and more, will be permanently changed by machine learning. Some things will stay the same, however. Humans will still need to be in the loop, 
-     even if only to do ‘sanity checks’ on the machine outputs.</p>
+    <p>Developments in machine learning and AI have had impacts in many areas. As mentioned above, things like Chess, Go, and even many video games, have been revolutionised by the advent of AI opponents that can beat even the best players. Other fields like writing and video/photo editing are currently in the process of changing because of the invention of powerful machine learning tools like GPT-3 and Dalle-E 2. All of these fields, and more, will be permanently changed by machine learning. Some things will stay the same, however. Humans will still need to be in the loop, even if only to do ‘sanity checks’ on the machine outputs. </p>
 
-    <p>As for jobs, many jobs are slowly being made redundant by machine learning applications. Writing tools like GPT-3 have already replaced human writers in some situations (ABC 2022),
-     and no doubt will continue to do so, being in many cases cheaper and more reliable. In addition, machine learning is also being applied to things like travel and shopping,
-      and this will no doubt replace more jobs.  As more and more uses become available for machine learning applications, more and more jobs can potentially be replaced.</p>
+    <p>As for jobs, many jobs are slowly being made redundant by machine learning applications. Writing tools like GPT-3 have already replaced human writers in some situations (ABC 2022), and no doubt will continue to do so, being in many cases cheaper and more reliable. In addition, machine learning is also being applied to things like travel and shopping, and this will no doubt replace more jobs.  As more and more uses become available for machine learning applications, more and more jobs can potentially be replaced.</p>
 
-    <p>One of the most interesting and useful changes that may be able to take place using machine learning is in the field of medical research. In the future,
-     machine learning applications may be able to do things like make more accurate diagnoses to patients’ conditions, 
-     using millions of patients’ data and previous diagnoses to make extremely well-informed decisions (May 2021). This could be one of the most positive impacts of machine learning.</p>
+    <p>One of the most interesting and useful changes that may be able to take place using machine learning is in the field of medical research. In the future, machine learning applications may be able to do things like making more accurate diagnoses of patients’ conditions, and using millions of patients’ data and previous diagnoses to make extremely well-informed decisions (May 2021). This could be one of the most positive impacts of machine learning. </p>
 
-    <p>Another field that will be impacted in the very near future is computer programming and software development. Tools like Github Copilot are gaining popularity.
-     Github Copilot is a tool that can write code and algorithms given a prompt like ‘write an algorithm that checks if a number is prime’ (Github 2022).
-      These types of tools will no doubt either replace or heavily change the jobs of programmers and software developers.</p>
+    <p>Another field that will be impacted soon is computer programming and software development. Tools like GitHub Copilot are gaining popularity. GitHub Copilot is a tool that can write code and algorithms given a prompt like ‘write an algorithm that checks if a number is prime’ (GitHub 2022). These types of tools will no doubt either replace or heavily change the jobs of programmers and software developers. </p>
 
-    <p><b>How will this affect you?</b></p>
-    <p>I think advances in machine learning may affect people’s daily lives in the very near future. Up to this point, the effects of machine learning have been small,
-     and in some cases obscure. Things like back-end algorithms, small improvements in existing products. 
-     However, the recent growth of machine learning technologies is such that it will surely not be long before more radical changes will come about through machine learning. 
-     Things like chatbots that will help people receive far better customer support, and machine learning algorithms that can help people in many other ways.</p>
+    <p>Up to this point, the effects of machine learning have been small, and in some cases obscure. Things like back-end algorithms, and small improvements in existing products. However, the recent growth of machine learning technologies is such that it will surely not be long before more radical changes will come about through machine learning. Things like chatbots that will help people receive far better customer support, and machine learning algorithms that can help people in many other ways. </p>
 
-    <p>One of the ways that machine learning will change people’s lives, as mentioned before, is medicine. 
-    In the future, I think people will be able to get better, faster, and more accurate diagnoses with the help of machine learning.
-     This, I believe, is a way that people’s lives will change, likely for the better, because of machine learning.</p>
+    <p>We don’t believe the effects of machine learning will be all good, however. Things like fake content, fake news, and the like, will continue to become more and more of a problem with the release and improvement of Dall-E 2, GPT-3, ‘deepfakes’ and similar tools. Unfortunately, if things continue in the current direction, fake content will become near indistinguishable from real. For this reason, ethical considerations need to be taken more seriously into account, in our opinion, than they are currently. </p>
 
-    <p>I don’t believe the effects of machine learning will be all good, however. 
-    Things like fake content, fake news, and the like, will continue to become more and more of a problem with the release and improvement of Dall-E 2, GPT-3, Deepfakes and similar tools. 
-    Unfortunately, if things continue in the current direction, fake content will become near indistinguishable from real.
-     For this reason, ethical considerations need to be taken more seriously into account, in my opinion, than they are currently.
-      Just because something can be done, doesn’t mean that it is a good idea.</p>
+    <p>Another way people’s lives will likely change due to machine learning is surveillance. With better and better facial recognition technologies becoming available, governments are slowly adopting these intending to reduce crime and increase surveillance and intelligence (Sydney Morning Herald 2019). Whether this is a good direction for machine learning to take is a subject for debate. </p>
 
-    <p>Another way people’s lives will likely change due to machine learning is surveillance. With better and better facial recognition technologies becoming available,
-     governments are slowly adopting these with the aim of reducing crime and increasing surveillance and intelligence (Sydney Morning Herald 2019).
-      Whether this is a good direction for machine learning to take is a subject for debate, although there is no doubt that it will change many people’s lives.</p>
+    <p>As for Joshua’s personal life, he believes products like GitHub Copilot have the potential to change things, as someone who is studying with the idea of getting a job as a programmer or software developer. Whether it will be a change for the better or worse, only time will tell. In addition, Joshua’s life will certainly change as a result of the many advances in machine learning outlined above. Joshua’s family and himself will no doubt benefit from the use of machine learning in the medical industry, even if we may not realise it. In addition, our lives will also likely be affected (for better or worse) by the use of machine learning in surveillance, among other things. </p>
 
-    <p>As for my personal life, I believe products like Github Copilot have the potential to change things for me, as someone who is studying with the idea of getting a job as a programmer or software developer.
-     Whether it will be a change for the better or worse, only time will tell.</p>
+
      <br>
      </div>
     </body>
