updated links to IT tech
removed links to own pages in IT tech, eg, in cybersecurity, removed linked to cybersecurity.

--- a/IT_tech_robots.html
+++ b/IT_tech_robots.html
@@ -65,8 +65,8 @@
 
 <!-- page heading-->
     <div class = "main-text">
-        <h2>Machine Learning</h2>
-    <h3>Prepared by: Joshua M<sup>c</sup>Corkell</h3><hr>
+        <h2>Robots</h2>
+    <h3>Prepared by: Sean_De_Chavez</h3><hr>
     
     </div>
 
