--- a/IT_tech_robots.html
+++ b/IT_tech_robots.html
@@ -66,7 +66,7 @@
 <!-- page heading-->
     <div class = "main-text">
         <h2>Robots</h2>
-    <h3>Prepared by: Sean_De_Chavez</h3><hr>
+    <h3>Prepared by: Sean De Chavez</h3><hr>
     
     </div>
 
@@ -82,23 +82,52 @@
     </figure>
 </div>
 
-    <p>Machine learning and AI (Artificial Intelligence) is an area of technology that has experienced exceptionally large amounts of growth in recent years. Machine learning can be used for almost any task that involves data processing and data analysis, such as facial recognition, natural language processing, and other pattern recognition applications. On a basic level, machine learning is achieved by showing an algorithm a large amount of data, which is used to train it to recognise similar patterns in other data. There are several ways to achieve this, and many different types of algorithms can be used. </p>
 
-    <p>One of the main ways machine learning is achieved is by using a neural network. A neural network is a set of layers of nodes (like neurons in a human brain, hence the name neural network). Each node relates to the nodes in the next layer. Exactly how much each node affects the next nodes is determined by a set of ‘weights’, and these weights are adjusted algorithmically to make the algorithm ‘learn’. At one end of the neural network there is an ‘input layer’, and at the other end, there is an ‘output layer’. One of the simplest applications for a neural network is handwriting recognition. The input nodes are pixels, and the output nodes are each a different character. Whichever character’s output node is switched on the most, is the neural network’s prediction. For each prediction, the network makes when learning, if correct it will reinforce its current weights, and if incorrect it will adjust them accordingly. </p>
+    <p>Robots are autonomous machines that come in many different shapes and sizes designed to replace human effort by performing the specific tasks they’ve been designed for such as vacuuming the floor or even assisting surgery. They accomplish their tasks by sensing their environment, computing actions to be taken in their environmental context, and then acting on their computation (Guizzo 2018). </p>
 
-    <p><b>The following are three of the most well-known and significant machine learning projects:</b></p>  
+    <p>Some roboticists also factor in complexity when it comes to calling something a robot. For example, some roboticists would consider something simple - like a thermostat - to be a robot, since it senses and computes the temperature against input and acts on the computation by turning the correct system on/off. Other roboticists, however, would deem thermostats to be too simple to be called a robot and would require it to be something with a body that moves (Guizzo 2018). </p>
 
-    <p>As one of the most famous examples of the powers of machine learning, AlphaGo made headlines in 2016 when it beat the European Go Champion Fan Hui in a match, and subsequently won a 6-game match 5-1 against the world’s best Go player Lee Se-dol (Silver et al. 2016, 2017). AlphaGo’s neural networks were trained partly by looking at Go master games, but mostly by playing millions of games against itself, and learning from its mistakes (BBC 2016). The same team that made AlphaGo subsequently made AlphaZero, a single system that mastered the games of Chess, Shogi (Japanese Chess) and Go, beating the world-class programs in all 3 games (Silver et al. 2018). </p> 
 
-    <p>GPT-3 is a natural language processing machine learning model created by OpenAI. It can generate natural language from a prompt, for example, “Write a tagline for a shop that sells computer parts” or “Write a 100-word summary of what chemistry is.”, and even things like “Summarize the following paragraph for a second-grade student” and “Translate the following sentence to Japanese” (OpenAI 2022a). Their API is currently available to use online to try for free, or pay to use it more extensively and with more control (OpenAI 2022b). </p>
+    <p>Due to the massive range of tasks robots can accomplish, they can be categorised into up to 15 categories. These categories are (Guizzo 2018): </p> 
+        <ul><li>Aerospace</li>
+            <li>Consumer</li>
+            <li>Disaster response</li>
+            <li>Drones</li>
+            <li>Education</li>
+            <li>Entertainment</li>
+            <li>Exoskeletons </li>
+            <li>Humanoids </li>
+            <li>Industrial </li>
+            <li>Medical</li>
+            <li>Military & Security </li>
+            <li>research</li>
+            <li>Self-Driving Cars </li>
+            <li>Telepresence </li>
+            <li>Underwater </li>
+        </ul>
+            <p>Robots are a technological marvel and stand as a testament to human ingenuity as they are at the crossroads of science, technology and engineering. They are capable of performing tasks that humans from 100 years ago would never have dreamed of. These tasks range from fun to quirky, from helpful to lifesaving and could potentially change societies.  </p>
 
-    <p>Dall-E 2 is an image processing machine learning model that can generate images from natural language prompts. Things like ‘a koala dunking a basketball’ or ‘a panda on the moon in the style of Claude Monet’ can be used to generate high-resolution images on demand. It can also do other things like alter existing pictures with realistic-looking edits, and produce variations on paintings and photos, for example, the Mona Lisa from a different angle or in a different style (OpenAI 2022c). </p>
+            <p>Robotics is a field with constant improvement and innovation, with various organisations producing state-of-the-art examples in their respective fields. One such example of this is NASA. NASA is leading the aerospace robotics field and has the intention of increasing utilisation in space missions to accompany and assist astronauts in many ways, including for their next manned moon mission. </p>
 
-    <p>In the future, machine learning is expected to continue revolutionizing many different fields, including many fields (like the game of Go) which had been thought to be unsolvable by technology. Things like better language processing will allow machine learning chatbot algorithms to sound more and more like people. Increased development on projects like Dall-E 2 and ‘deepfakes’ could lead to a near unlimited generation of fake videos and images.  </p>
+            <p>In 2019, NASA deployed a free-flying robotic system called ‘Astrobee’, which operates aboard the International Space Station (ISS). This system consists of three flying cube-like robots named Honey, Bumble, and Queen which serve to alleviate the workload of staff by performing basic tasks such as taking inventory, recording experiments with their cameras, or transporting items using their arms. They are also the primary testing grounds for future zero gravity robot technologies (Kanis 2022). The ‘Astrobee’ system is constantly being tested, experimented upon and improved, and NASA is intending to create an autonomous system capable of repairing and maintaining unmanned spacecraft. The ‘Astrobee’ system will play a pivotal role in this, being the ‘eyes’ of the system with its 3D mapping capabilities (Ackerman 2021; Tavares 2022). </p>
 
-    <p>Many of these developments in machine learning have only been made possible because of increases in processing power. Training and using large neural networks (which often contain many millions of nodes) requires extremely large amounts of processing power, most of which is used simply for doing matrix multiplication and similar number crunching operations. This problem has been partly overcome using large numbers of powerful GPUs; and although this is still the main limiting factor in machine learning development, research is currently being undertaken to find ways of doing these types of operations faster and more efficiently (Muller 2022, Mythic 2022). </p>
+            <p>Currently, industrial robotics has an increasing presence within the industrial industry as systems can be programmed to do tasks that would otherwise be unsafe long-term, or simply too inefficient to be feasible financially. These systems usually take the form of an ‘arm’ which can be modified or configured to suit their function - just about anything in the industrial sector. An example of this is the ‘Stretch’ robot by robotics design firm Boston Dynamics, which is capable of handling the troubling work of unloading boxes off the back of a truck at a higher rate than a human worker (Ackerman 2021). </p>
 
-    <p><b>What is the likely impact?</b></p> 
+            <p>Perhaps the most well-known example of robotics in the industrial industry is Amazon. They use systems known as ‘Kivas’ in their fulfilment centres which are not the usual ‘arm’ design, but instead mobile robots that transport ‘pods’ of items to an Amazon worker who then adds or removes items for packing. These robots navigate by using scanners underneath to scan the codes on the floor which tell them where they are. In addition, they use sensors at the front to prevent collisions (Roser 2019). </p>
+
+            <p>There is a common fear of a robot uprising instilled in society by science fiction films such as The Terminator and Matrix franchises. However, robots are not capable of harming humans unless they are programmed to, and these films are only fiction with little to no basis in reality. </p>
+
+            <p>They also fail to reflect the numerous positive impacts that robots have the potential to make, whilst others also demonstrate a fear that robotics will take industrial jobs away from humans. Even though robotics has an increasing presence in industry, robots ultimately have an overall positive effect by shouldering the physical burdens of industrial jobs, freeing humans to do less physically intensive tasks where they need not sacrifice their health for an employer. </p>
+
+            <p>That is not to say all aspects of an industrial role will be automated, however. There will always have to be humans working alongside these systems as they are not able to fully replicate human ability. Likely, everyone from various commercial sectors will eventually utilise machines as more systems are created for purposes outside of the industrial world. </p>
+
+            <p>One such example is in medicine, where robotics could potentially reshape the field with their extreme precision, which they could assist in – for example, difficult surgeries and other operations. Further AI developments could lead them to be able to perform surgery on their own. </p>
+
+            <p>On another note, robots will play a large part in taking humans back to the moon with the aforementioned ‘Astrobee’ system, and with other integrated robotic systems organisations such as NASA are developing. Fields like deep space exploration are also performed solely with robots, as this dramatically reduces the risks and difficulties associated with human astronauts. The potential of robots is limitless and only bound by the confines of current technology, which is constantly being innovated and improved. </p>
+
+            <p>Researching this topic has piqued Sean’s interest in robots and he will be keeping an eye on future robotics developments through the IEEE magazine. He will also be keeping a lookout for any examples at work as Sean works in veterinary pharmaceuticals, where most warehouse processes are manually performed due to the extremely fragile nature of the product. As Sean’s father is a mechanical engineer, and his mother an electrical engineer, albeit non-practising, he may be able to convince them to purchase a robot vacuum cleaner should the existing vacuum cleaner break down, as this is an excellent example of robotics reducing in price and becoming an accessible technology. </p>
+
+
 
     <div class = "main-text">
     <figure class = "figure-style">
@@ -106,23 +135,6 @@
         <figcaption>Image by Steve Jurvetson (CC BY 2.0))<a href = "https://www.flickr.com/photos/jurvetson/51768392370/in/photolist-2mSAxt9-2mHKtJg-2kYme6n-2mVLU2i-KSVnz5-2iw6Z2Y-8gQU1J-2nvh3Rs-2nvh3R2-2nvh3Q5-2nvfNN3-NZ9rYe-XiWhoY-owp36o-ouQke6-oeVGFC-ouicd4-of12fT-2nvfMC5-2nvigvj-2nvaxao-2nvigus-2nvfNL4-2nvh3M9-XhnwK5-2iw6Ywp-YpGjyt-2m1BWk9-2m1Atjb-2kYfDru-2m1wtMW-2mW8MSF-N8E6Xk-2nvigsU-2nvh3LH-2nvfMyT-2nvh3Kv-2nvax6L-2nvigr1-2nvfNHi-2nvfMw8-2nvax5P-2nvh3H1-2nvigph-2nvax4b-2nvh32w-YiJX4K-2jEQ6ka-2jG9PmX-XYKtdW">AI drawn art</a></figcaption>
         </figure>
     </div>
-
-    <p>Developments in machine learning and AI have had impacts in many areas. As mentioned above, things like Chess, Go, and even many video games, have been revolutionised by the advent of AI opponents that can beat even the best players. Other fields like writing and video/photo editing are currently in the process of changing because of the invention of powerful machine learning tools like GPT-3 and Dalle-E 2. All of these fields, and more, will be permanently changed by machine learning. Some things will stay the same, however. Humans will still need to be in the loop, even if only to do ‘sanity checks’ on the machine outputs. </p>
-
-    <p>As for jobs, many jobs are slowly being made redundant by machine learning applications. Writing tools like GPT-3 have already replaced human writers in some situations (ABC 2022), and no doubt will continue to do so, being in many cases cheaper and more reliable. In addition, machine learning is also being applied to things like travel and shopping, and this will no doubt replace more jobs.  As more and more uses become available for machine learning applications, more and more jobs can potentially be replaced.</p>
-
-    <p>One of the most interesting and useful changes that may be able to take place using machine learning is in the field of medical research. In the future, machine learning applications may be able to do things like making more accurate diagnoses of patients’ conditions, and using millions of patients’ data and previous diagnoses to make extremely well-informed decisions (May 2021). This could be one of the most positive impacts of machine learning. </p>
-
-    <p>Another field that will be impacted soon is computer programming and software development. Tools like GitHub Copilot are gaining popularity. GitHub Copilot is a tool that can write code and algorithms given a prompt like ‘write an algorithm that checks if a number is prime’ (GitHub 2022). These types of tools will no doubt either replace or heavily change the jobs of programmers and software developers. </p>
-
-    <p>Up to this point, the effects of machine learning have been small, and in some cases obscure. Things like back-end algorithms, and small improvements in existing products. However, the recent growth of machine learning technologies is such that it will surely not be long before more radical changes will come about through machine learning. Things like chatbots that will help people receive far better customer support, and machine learning algorithms that can help people in many other ways. </p>
-
-    <p>We don’t believe the effects of machine learning will be all good, however. Things like fake content, fake news, and the like, will continue to become more and more of a problem with the release and improvement of Dall-E 2, GPT-3, ‘deepfakes’ and similar tools. Unfortunately, if things continue in the current direction, fake content will become near indistinguishable from real. For this reason, ethical considerations need to be taken more seriously into account, in our opinion, than they are currently. </p>
-
-    <p>Another way people’s lives will likely change due to machine learning is surveillance. With better and better facial recognition technologies becoming available, governments are slowly adopting these intending to reduce crime and increase surveillance and intelligence (Sydney Morning Herald 2019). Whether this is a good direction for machine learning to take is a subject for debate. </p>
-
-    <p>As for Joshua’s personal life, he believes products like GitHub Copilot have the potential to change things, as someone who is studying with the idea of getting a job as a programmer or software developer. Whether it will be a change for the better or worse, only time will tell. In addition, Joshua’s life will certainly change as a result of the many advances in machine learning outlined above. Joshua’s family and himself will no doubt benefit from the use of machine learning in the medical industry, even if we may not realise it. In addition, our lives will also likely be affected (for better or worse) by the use of machine learning in surveillance, among other things. </p>
-
 
      <br>
      </div>
