updated robots page
added Amazon robot image, added figure-style-pd for padding to css stylesheet.

--- a/IT_tech_robots.html
+++ b/IT_tech_robots.html
@@ -76,9 +76,9 @@
 <p><b>What does it do?</b></p>
 
 <div class = "main-text">
-<figure class = "figure-style">
-    <img src="images/machinelearningboard.jpg">
-    <figcaption>image by Mike MacKenzie (CC BY 2.0))<a href = "https://www.flickr.com/photos/mikemacmarketing/30212411048/in/photolist-N2LvdL-aXHxG6-2gzmSJF-2gzmmFU-dfjpqV-2aDXanU-28VrEhA-2m1ZUtY-2mihXZU-27pq9bw-2ncoxVm-FFvQ9o-2ix6wfR-2mY4hZf-2n5765L-2mA6UtX-2mXZEpD-2mAPPfc-WMNtZC-9fNSyA-bqy1No-SXc3Pi-dVH9ab-2nbDRSU-RLqBM2-bsm7pY-2nbZBXY-287UFXf-dgLNXi-2natQiM-KJejp6-xXJuwi-qesQoa-2nrywfc-Eanozh-2gXUF6u-2mKT8HW-MZCqiH-2m44LaL-CHJwJL-KSVnz5-2mhYu19-QdCKW6-2nbY4ri-2keuuNe-M198bY-2k5mzns-2jzkWJP-2ntrBv8-2mG7672">Robot Machine Learning</a></figcaption>
+<figure class = "figure-style-pd">
+    <img src="images/amazonbot.png" alt = "amazon robot" align="right-120px" width="500" height="300"
+    <figcaption>image by Amazon Assets(CC BY 2.0))<a href = "https://assets.aboutamazon.com/dims4/default/4eb6559/2147483647/strip/true/crop/1155x650+107+0/resize/1320x743!/format/webp/quality/90/?url=https%3A%2F%2Famazon-blogs-brightspot.s3.amazonaws.com%2F11%2F0a%2F7bbe718640779a7e3418fa093c80%2Fpic1.jfif"> Amazon robot</a></figcaption>
     </figure>
 </div>
 
@@ -114,13 +114,13 @@
             <p>Currently, industrial robotics has an increasing presence within the industrial industry as systems can be programmed to do tasks that would otherwise be unsafe long-term, or simply too inefficient to be feasible financially. These systems usually take the form of an ‘arm’ which can be modified or configured to suit their function - just about anything in the industrial sector. An example of this is the ‘Stretch’ robot by robotics design firm Boston Dynamics, which is capable of handling the troubling work of unloading boxes off the back of a truck at a higher rate than a human worker (Ackerman 2021). </p>
 
 
-
             <div class = "main-text">
-                <figure class = "figure-style">
-                    <img src="images/AIart.jpg">
-                    <figcaption>Image by Steve Jurvetson (CC BY 2.0))<a href = "https://www.flickr.com/photos/jurvetson/51768392370/in/photolist-2mSAxt9-2mHKtJg-2kYme6n-2mVLU2i-KSVnz5-2iw6Z2Y-8gQU1J-2nvh3Rs-2nvh3R2-2nvh3Q5-2nvfNN3-NZ9rYe-XiWhoY-owp36o-ouQke6-oeVGFC-ouicd4-of12fT-2nvfMC5-2nvigvj-2nvaxao-2nvigus-2nvfNL4-2nvh3M9-XhnwK5-2iw6Ywp-YpGjyt-2m1BWk9-2m1Atjb-2kYfDru-2m1wtMW-2mW8MSF-N8E6Xk-2nvigsU-2nvh3LH-2nvfMyT-2nvh3Kv-2nvax6L-2nvigr1-2nvfNHi-2nvfMw8-2nvax5P-2nvh3H1-2nvigph-2nvax4b-2nvh32w-YiJX4K-2jEQ6ka-2jG9PmX-XYKtdW">AI drawn art</a></figcaption>
+                <figure class = "figure-style-pd">
+                    <img src="images/amazonbot.png" alt = "amazon robot" align="right-120px" width="500" height="300"
+                    <figcaption>image by Amazon Assets(CC BY 2.0))<a href = "https://assets.aboutamazon.com/dims4/default/4eb6559/2147483647/strip/true/crop/1155x650+107+0/resize/1320x743!/format/webp/quality/90/?url=https%3A%2F%2Famazon-blogs-brightspot.s3.amazonaws.com%2F11%2F0a%2F7bbe718640779a7e3418fa093c80%2Fpic1.jfif"> Amazon robot</a></figcaption>
                     </figure>
                 </div>
+                
             
 
             <p>Perhaps the most well-known example of robotics in the industrial industry is Amazon. They use systems known as ‘Kivas’ in their fulfilment centres which are not the usual ‘arm’ design, but instead mobile robots that transport ‘pods’ of items to an Amazon worker who then adds or removes items for packing. These robots navigate by using scanners underneath to scan the codes on the floor which tell them where they are. In addition, they use sensors at the front to prevent collisions (Roser 2019). </p>
