updated robots page
added image, and link citation for image

--- a/IT_tech_robots.html
+++ b/IT_tech_robots.html
@@ -76,8 +76,8 @@
 <p><b>What does it do?</b></p>
 
 <figure class = "figure-style">
-    <img src="images/amazonbot.png" width="100%" alt="Amazon robot">
-        <br><figcaption>image by Amazon Assets(CC BY 2.0))<a href = "https://assets.aboutamazon.com/dims4/default/4eb6559/2147483647/strip/true/crop/1155x650+107+0/resize/1320x743!/format/webp/quality/90/?url=https%3A%2F%2Famazon-blogs-brightspot.s3.amazonaws.com%2F11%2F0a%2F7bbe718640779a7e3418fa093c80%2Fpic1.jfif"> Amazon robot</a></figcaption>
+    <img src="images/Da_Vinci_Endowrist.png" width="100%" alt="Amazon robot">
+        <br><figcaption>Da Vinci Surgical Robot Endowrist (Longmore et al. 2020) <a href = "https://www.mdpi.com/2218-6581/9/2/42#">Laparoscopic Robotic Surgery: Current Perspective and Future Directions</a></figcaption>
 </figure>
 
     <p>Robots are autonomous machines that come in many different shapes and sizes designed to replace human effort by performing the specific tasks they’ve been designed for such as vacuuming the floor or even assisting surgery. They accomplish their tasks by sensing their environment, computing actions to be taken in their environmental context, and then acting on their computation (Guizzo 2018). </p>
