updated Industry data
added all graphs, added <br> for formatting

--- a/Industry_data.html
+++ b/Industry_data.html
@@ -113,6 +113,12 @@
             <li>Troubleshooting – being able to walk through a problem step-by-step until an adequate solution can be reached </li>  
         </ul>
         <p><b>IT-specific skills that are consistent across the career paths include:</b></p>
+
+        <figure class = "figure-style-40">
+            <img src="images/ITspecific.png" align="right" width="100%">
+            <figcaption>(Source: Labour Insight Jobs (Burning Glass Technologies))</figcaption>
+        </figure>
+
         <ul>
             <li>Systems and networks – these are often specific to the position although they can also be quite generic – for example, CRM </li>
             <li>Multiple back-end programming languages – for example; Python, Java, C# /li>
@@ -124,23 +130,27 @@
         </ul>
 
         <p><b>IT-specific skills demand and ranking</b></p>
-        <p>Strong Coding Skills occur in 80% of employer-demanded skills for our group’s desired jobs. Occurring 30% of the time is experience with GitHub as well as databases. With far less demand at only 17% is the requirement for experience with Microsoft Office, software architecture and Windows and/or Windows Server. From this data, it is clear that employers favour strong programming skills in new employees. </p>
+
+                <p>Strong Coding Skills occur in 80% of employer-demanded skills for our group’s desired jobs. Occurring 30% of the time is experience with GitHub as well as databases. With far less demand at only 17% is the requirement for experience with Microsoft Office, software architecture and Windows and/or Windows Server. From this data, it is clear that employers favour strong programming skills in new employees. </p>
 
         <p><b>General skills demand and ranking </b></p>
+
         <p>Problem-solving, as well as written and verbal communication, occur in 100% of employer-demanded skills for our group’s desired jobs. 80% of the time the ability to work in a team is a required skill. With less demand – required 30% of the time – are interpersonal, time and project management skills. 20% of the time negotiation skills and experience with Microsoft Office are essential. From this data, it is clear that employers favour problem solving, and good written and verbal communication skills among new employees. </p>
 
         <p><b>IT-specific skills not in the group skill set </b></p>
         <p>Cybersecurity, helpdesk and AI engineering experience are three of the highest-ranked IT-specific skills not in our required skill set. For example, cybersecurity experience is most in demand from jobs such as CISO, Cybersecurity Engineer or Penetration Tester, as these positions require knowledge of maintaining information security and risk management as well as strong knowledge in networking, and encryption techniques. Whereas AI engineering is more in demand for positions such as Data Scientists and Machine Learning Engineer where the position requires optimising customer experiences</p>
-        
+        <figure class = "figure-style-40">
+            <img src="images/generalskills.png" align="right" width="100%">
+            <figcaption>(Source: Labour Insight Jobs (Burning Glass Technologies))</figcaption>
+        </figure>       
+<br>
+<br>
         <p><b>General skills not in the group skill set </b></p>
+
         <p>Creativity, organisation, and perseverance personality traits are three of the highest-ranked general requirements not in our skill set. For example, organisation and perseverance qualities are most in demand from positions such as helpdesk support. Whereas creativity is essential in positions such as Graphic Designer. </p>
 
         <p><b>Helen’s opinion after a review of the data </b></p>
-        <p>Reviewing the data from Burning Glass has not changed my mind regarding the career path I have chosen. Analysing the data has allowed me to conclude that I have chosen the appropriate career choice for my skill set and has allowed me to bring attention to areas of soft skills which would require my focus. </p>
-
-
-
-        
+        <p>Reviewing the data from Burning Glass has not changed my mind regarding the career path I have chosen. Analysing the data has allowed me to conclude that I have chosen the appropriate career choice for my skill set and has allowed me to bring attention to areas of soft skills which would require my focus. </p>     
         <br>
     </div>
 </body>
